[gd_scene load_steps=6 format=3 uid="uid://c3x6lihaltco3"]

[ext_resource type="Script" path="res://collectable.gd" id="1_q5hti"]
[ext_resource type="ArrayMesh" uid="uid://2ex1wubgv250" path="res://level/prefabs/utensilFork.obj" id="2_k0m7t"]
[ext_resource type="ArrayMesh" uid="uid://do4y26wr05s5h" path="res://level/prefabs/utensilKnife.obj" id="3_g1idg"]
[ext_resource type="ArrayMesh" uid="uid://cifta42wocrwn" path="res://level/prefabs/utensilSpoon.obj" id="4_a4cu8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0ts0n"]

[node name="collectable" type="Node3D"]
script = ExtResource("1_q5hti")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.541135, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_0ts0n")

[node name="fork1" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("2_k0m7t")
skeleton = NodePath("../..")

[node name="knife1" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("3_g1idg")
skeleton = NodePath("../..")

[node name="spoon1" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("4_a4cu8")
skeleton = NodePath("../..")

[node name="fork2" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("2_k0m7t")
skeleton = NodePath("../..")

[node name="knife2" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("3_g1idg")
skeleton = NodePath("../..")

[node name="spoon2" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("4_a4cu8")
skeleton = NodePath("../..")

[node name="fork3" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("2_k0m7t")
skeleton = NodePath("../..")

[node name="knife3" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-0.877977, -2.21752, 0, 2.21752, -0.877977, 0, 0, 0, 2.385, 0, 0, 0)
visible = false
mesh = ExtResource("3_g1idg")
skeleton = NodePath("../..")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
